# promocode-bot

./: .env.example  .gitignore  README.md  promocode_bot.session-journal  pyproject.toml
app/: cache.py  config.py  database.py  main.py
app/api/: admin.py  codes.py  platforms.py  stats.py
app/dashboard/: __init__.py  routes.py
app/models/: __init__.py  promo_code.py  scraping_source.py
app/schemas/: __init__.py  feedback.py  promo_code.py
app/scrapers/: amazon_br.py  base.py  mercado_livre.py  telegram.py
app/services/: confidence.py  scheduler.py
app/templates/: base.html  dashboard.html
app/templates/partials/: code_row.html  codes_table.html  stats_cards.html
docs/superpowers/plans/: 2026-03-15-promocode-ai.md
docs/superpowers/specs/: 2026-03-15-promocode-ai-design.md
scripts/: telegram_setup.py
tests/: conftest.py
tests/test_api/: test_admin.py  test_codes.py  test_feedback.py  test_platforms.py  test_stats.py  test_submissions.py
tests/test_dashboard/: test_admin_token.py  test_codes_table.py  test_integration.py  test_scrape.py  test_stats.py  test_vote.py
tests/test_scrapers/: test_amazon_br.py  test_base.py  test_mercado_livre.py  test_telegram.py
tests/test_scrapers/fixtures/: amazon_br_coupons.html  mercado_livre_coupons.html
tests/test_services/: test_confidence.py  test_scheduler.py
